# face_detection_demo

./: README.md  build.sh
opencv/: CMakeLists.txt  client.cpp  event_detection.hpp  main.cpp
